- migrate (mamba)
- uniform usage of language defines ('_AM_' instead of 'AM_', '_MD_' instead of 'MD_', '_MI_' instead of 'MI_') (goffy)
- fixed bug in lx_content.tpl (goffy)
- fixed problems with template_main (goffy)
- updated german language files (goffy)
- added smarty defaults (goffy)
- Packed hashtable optimizations (mamba)
- fix Unqualified function/constant reference (mamba)


<h5>1.53 Beta 1     [NOT RELEASED]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
<hr>
- replaced $xoopsGTicket to $GLOBALS['xoopsSecurity'] (mamba)
- added namespaces (mamba)
- added Request (mamba)
- added LetterChoice highlighting available items (mamba)


1.52 Beta 2       NOT RELEASED
=================================
- started conversion to XMF (mamba)
- standard copyright headers (mamba)
- Hardening to type safe (mamba)
- moved functions to Utility class (mamba)
- adjusted DB defaults for 'item_tag' (mamba)
- changed extensions to .tpl (mamba)
- redirect changes it case of error (aerograf/bleekk)

1.52 Beta 1       NOT RELEASED
=================================
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- removed @version (mamba)
- PSR-2 code cosmetics (mamba)
- addNavigation(basename(__FILE__))  (mamba)
- dirname(__FILE__) to __DIR__ (mamba)
- XOOPS 2.5.8, PHP 7 (mamba)
- replaced < b /> with < b > (mamba)
- Unnecessary double quotes (mamba)
- reference mismatch (mamba)
- Hardening to type safe (mamba)
- update Help (mamba)
- changed _handler to Handler (mamba)
- removed 'exit()' from redirect_header calls (mamba)
- replaced intval with (int) (mamba)
- fixed reference notices (goffy)
- changed upload directory for cat image to root/uploads/lexikon/categories/images (goffy)
- created new configs imguploadwd and imguploadsize (goffy)


---------------------------------------
1.51.8              2014-03-07
---------------------------------------

- Fixed XoopsTree deprecated, following Trabis dirty method found on xoops.org
