@@ -1,0 +1,41 @@
+<?php
+/*
+ * You may not change or alter any portion of this comment or credits
+ * of supporting developers from this source code or any supporting source code
+ * which is considered copyrighted (c) material of the original comment or credit authors.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ */
+
+/**
+ * @copyright    XOOPS Project (https://xoops.org)
+ * @license      GNU GPL 2 or later (https://www.gnu.org/licenses/gpl-2.0.html)
+ * @author     XOOPS Development Team
+ */
+
+// Blocks & Groups Admin
+define('_AM_TOPPAGE', 'Top Page');
+define('_AM_ALLPAGES', 'All Pages');
+define('_AM_TITLE', 'Title');
+define('_AM_SIDE', 'Side');
+define('_AM_WEIGHT', 'Weight');
+define('_AM_VISIBLE', 'Visible');
+define('_AM_VISIBLEIN', 'Visible In');
+define('_AM_ACTION', 'Action');
+define('_AM_LATESTNEWS_TITLE', 'Title');
+define('_AM_LATESTNEWS_WEIGHT', 'Weight');
+define('_AM_BCACHETIME', 'Cache time');
+define('_AM_LATESTNEWS_ACTION', 'Action');
+define('_AM_ACTIVERIGHTS', 'Module administration rights');
+define('_AM_ACCESSRIGHTS', 'Module access rights');
+define('_AM_BADMIN', 'Blocks administration');
+define('_AM_ADGS', 'Groups');
+define('_AM_ALLMODULEPAGES', 'Groups');
+define('_AM_SYSTEMLEVEL', '_AM_SYSTEMLEVEL');
+define('_AM_ADMINBLOCK', '_AM_ADMINBLOCK');
+
+define('_AM_BLOCKTAG1', '%s will print %s');
+define('_AM_ADDBLOCK', 'Add Block');
+define('_AM_NOTSELNG', 'Not Sel');
